--- a/Gallery.html
+++ b/Gallery.html
@@ -106,7 +106,7 @@
     <link rel="stylesheet" type="text/css" href="css/flaticon.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <div class="container">
-    <div id="myCarousel11" class="carousel slide" data-ride="carousel">
+    <div id="carousel-example" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
           <li data-target="#carousel-example" data-slide-to="1"></li>
