--- a/Rakesh-Pranav.html
+++ b/Rakesh-Pranav.html
@@ -49,10 +49,10 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <div class="toll-free"><a href="https://wa.me/918939764764?text=Hi" target="_blank"><i class="fa fa-whatsapp"></i> &nbsp; 8939764764</a></div>
                     <ul class="nav navbar-nav pull-right">
-                      <li class="active"><a href="/">Home</a></li>
+                      <li><a href="/">Home</a></li>
                       <li><a href="residential-construction.html">Construction Package</a></li>
-                      <li  class="active"><a href="Current.html">Current Projects</a></li>
-                      <li><a href="Completed.html"> Completed Projects</a></li>
+                      <li><a href="Current.html">Current Projects</a></li>
+                      <li  class="active"><a href="Completed.html"> Completed Projects</a></li>
                       <li><a href="Gallery.html">Gallery</a></li>
                       <li><a href="enquiry.html">Contact Us</a></li>
             
@@ -70,7 +70,6 @@
               <a data-toggle="lightbox" data-gallery="gallery11" href="images/Completed Projects/Rakesh-Pranav Flats - Periyar Nagar.jpg">
                 <img src="images/Gallery/Rakesh-Pranav Flats - Periyar Nagar.jpg" style="width:50vh;border-radius: 3%;" alt="Sri Sai Thiara" class="img-responsive" data-pagespeed-url-hash="2821829119" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
             </a>
-                <!-- <img src="./images/Current Projects/Sri Sai Ramya- Annai Thersa Nagar.jpg" style="width:50vh;border-radius: 3%;" class="img-responsive"  alt="" /> -->
             </div>
                 <div class="col-lg-4">
                     <div class="amentities">
@@ -134,7 +133,7 @@
               </div>
           </div>
 
-          <div class="col-lg-8">
+          <div class="col-lg-8 map-iframe">
               <div class="row wow slideInRight" id="enquiry-form" style="visibility: visible; animation-name: slideInRight;">
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 50%">
                   <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31105.882241630785!2d80.199142!3d12.956791!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x79a7a657904c91d8!2sGK%20Rakesh%20Pranav%20Flats!5e0!3m2!1sen!2sin!4v1670243414838!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                      </div>
