--- a/Sri Sai Shanmuga.html
+++ b/Sri Sai Shanmuga.html
@@ -49,10 +49,10 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <div class="toll-free"><a href="https://wa.me/918939764764?text=Hi" target="_blank"><i class="fa fa-whatsapp"></i> &nbsp; 8939764764</a></div>
                     <ul class="nav navbar-nav pull-right">
-                      <li class="active"><a href="/">Home</a></li>
+                      <li><a href="/">Home</a></li>
                       <li><a href="residential-construction.html">Construction Package</a></li>
-                      <li  class="active"><a href="Current.html">Current Projects</a></li>
-                      <li><a href="Completed.html"> Completed Projects</a></li>
+                      <li><a href="Current.html">Current Projects</a></li>
+                      <li   class="active"><a href="Completed.html"> Completed Projects</a></li>
                       <li><a href="Gallery.html">Gallery</a></li>
                       <li><a href="enquiry.html">Contact Us</a></li>
             
@@ -134,7 +134,7 @@
               </div>
           </div>
 
-          <div class="col-lg-8">
+          <div class="col-lg-8 map-iframe">
               <div class="row wow slideInRight" id="enquiry-form" style="visibility: visible; animation-name: slideInRight;">
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 50%">
                     <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.9956887839335!2d80.20459779468422!3d12.97212732394245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525dcbfaa229a9%3A0x19afbb7db6c4d9f1!2sGK%20Sri%20Sai%20Ramya!5e0!3m2!1sen!2sin!4v1670172108887!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
