--- a/Thanshikaa.html
+++ b/Thanshikaa.html
@@ -65,7 +65,7 @@
         </nav>
     </header>
     <div class="main_title text-center">
-        <h1>Rakesh-Pranav Flats </h1>
+        <h1>Thanshikaa Flats </h1>
     </div>
   
       <div class="container">
@@ -136,10 +136,10 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-8">
+          <div class="col-lg-8 map-iframe">
             <div class="row wow slideInRight" id="enquiry-form" style="visibility: visible; animation-name: slideInRight;">
               <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 50%">
-                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31104.06671514988!2d80.1997!3d12.971318000000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000ba551f1%3A0x51c1bdc2126e3b4a!2sGK%20Thanshikaa%20Flats!5e0!3m2!1sen!2sin!4v1670244064117!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                      </div>
+                <iframe class="map"  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31104.06671514988!2d80.1997!3d12.971318000000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000ba551f1%3A0x51c1bdc2126e3b4a!2sGK%20Thanshikaa%20Flats!5e0!3m2!1sen!2sin!4v1670244064117!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                      </div>
             </div>
         </div>
     </div>
