--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <ul class="nav navbar-nav pull-right">
                   <li class="active"><a href="/">Home</a></li>
                   <li><a href="residential-construction.html">Construction Package</a></li>
-                  <li  class="active"><a href="Current.html">Current Projects</a></li>
+                  <li><a href="Current.html">Current Projects</a></li>
                   <li><a href="Completed.html"> Completed Projects</a></li>
                   <li><a href="Gallery.html">Gallery</a></li>
                   <li><a href="enquiry.html">Contact Us</a></li>
@@ -103,50 +103,6 @@
         </div>
     </nav>
 </header>
-
-
-<!-- <div class="carousel fade-carousel slide" data-ride="carousel" data-interval="5000" id="bs-carousel">
-    <div class="soverlay"></div>
-
-    <ol class="carousel-indicators">
-        <li data-target="#bs-carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#bs-carousel" data-slide-to="1"></li>
-        <li data-target="#bs-carousel" data-slide-to="2"></li>
-    </ol>
-  
-    <div class="carousel-inner">
-        <div class="item slides active">
-            <div class="slide-1"></div>
-            <div class="hero">
-                <div class="slider-text-inner text-center">
-                    <h4>Providing all Kinds of Construction Services</h4>
-                    <h3>We Build Buildings <br>Professionally</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="item slides">
-            <div class="slide-2"></div>
-            <div class="hero">        
-                <div class="slider-text-inner text-center">
-                    <h4>Building Your Solid</h4>
-                    <h3>High Class Building</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="item slides">
-            <div class="slide-3"></div>
-            <div class="hero">        
-                <div class="slider-text-inner text-center">
-                    <h3>Make Your Dream Home <br><span style="font-weight:100">with GK Promoters</span></h3>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
 
 <section id="banner">
     <div class="flexslider">
