--- a/Akrithi.html
+++ b/Akrithi.html
@@ -50,16 +50,13 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <div class="toll-free"><a href="https://wa.me/918939764764?text=Hi" target="_blank"><i class="fa fa-whatsapp"></i> &nbsp; 8939764764</a></div>
                     <ul class="nav navbar-nav pull-right">
-                      <li class="active"><a href="/">Home</a></li>
+                      <li ><a href="/">Home</a></li>
                       <li><a href="residential-construction.html">Construction Package</a></li>
-                      <li  class="active"><a href="Current.html">Current Projects</a></li>
-                      <li><a href="Completed.html"> Completed Projects</a></li>
+                      <li ><a href="Current.html">Current Projects</a></li>
+                      <li  class="active"><a href="Completed.html"> Completed Projects</a></li>
                       <li><a href="Gallery.html">Gallery</a></li>
                       <li><a href="enquiry.html">Contact Us</a></li>
-                        <!-- <li class="mobile-login"><a href="javascript://" onclick="OpenLogin(1)" target="_blank">Login</a></li> -->
-                        <!-- <li class="header-login">
-                            <a class="clogin" href="https://customers.GK Promoters.com" target="_blank">Login</a>
-                        </li> -->
+                      
                     </ul>
                 </div>
             </div>
@@ -133,7 +130,7 @@
               </div>
           </div>
 
-          <div class="col-lg-8">
+          <div class="col-lg-8 map-iframe">
               <div class="row wow slideInRight" id="enquiry-form" style="visibility: visible; animation-name: slideInRight;">
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 50%">
                     <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.1641704634944!2d80.19484141518089!3d12.961344618609239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525dc9c7ed5b2f%3A0x8a59bfa395fbb6f7!2sGK%20Promoters%20-%20Akriti%20Flats!5e0!3m2!1sen!2sin!4v1670244746044!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
