--- a/Sri Sai Aditiya.html
+++ b/Sri Sai Aditiya.html
@@ -49,10 +49,10 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <div class="toll-free"><a href="https://wa.me/918939764764?text=Hi" target="_blank"><i class="fa fa-whatsapp"></i> &nbsp; 8939764764</a></div>
                     <ul class="nav navbar-nav pull-right">
-                      <li class="active"><a href="/">Home</a></li>
+                      <li><a href="/">Home</a></li>
                       <li><a href="residential-construction.html">Construction Package</a></li>
-                      <li  class="active"><a href="Current.html">Current Projects</a></li>
-                      <li><a href="Completed.html"> Completed Projects</a></li>
+                      <li><a href="Current.html">Current Projects</a></li>
+                      <li  class="active"><a href="Completed.html"> Completed Projects</a></li>
                       <li><a href="Gallery.html">Gallery</a></li>
                       <li><a href="enquiry.html">Contact Us</a></li>
             
@@ -134,7 +134,7 @@
               </div>
           </div>
 
-          <div class="col-lg-8">
+          <div class="col-lg-8 map-iframe">
               <div class="row wow slideInRight" id="enquiry-form" style="visibility: visible; animation-name: slideInRight;">
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 50%">
                     <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31104.06671514988!2d80.1997!3d12.971318000000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5397f41469918ee2!2sSri%20sai%20adithya%20flats!5e0!3m2!1sen!2sin!4v1670227216215!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
