--- a/Thiara.html
+++ b/Thiara.html
@@ -180,7 +180,7 @@
                       <h6><a href="tel:+918939764764">(+91) 8939764764</a></h6>
                       <p>Mon to Sat 9am to 7pm</p>
                   </div>
-
+ 
                   <div class="info_item">
                       <i class="fa fa-envelope-o"></i>
                       <h6><a href="mailto:info@gkpromoters.com">info@gkprmoters.com</a></h6>
@@ -189,10 +189,10 @@
               </div>
           </div>
 
-          <div class="col-lg-8">
+          <div class="col-lg-8 map-iframe">
               <div class="row wow slideInRight" id="enquiry-form" style="visibility: visible; animation-name: slideInRight;">
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 50%">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15551.791669081686!2d80.20015908600061!3d12.975183063538584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d4d0f600555%3A0xe8c1e8be9602e9a7!2sThiara%20Flats!5e0!3m2!1sen!2sin!4v1670173013023!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15551.791669081686!2d80.20015908600061!3d12.975183063538584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d4d0f600555%3A0xe8c1e8be9602e9a7!2sThiara%20Flats!5e0!3m2!1sen!2sin!4v1670173013023!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
               </div>
           </div>
