--- a/Akrithi.html
+++ b/Akrithi.html
@@ -63,7 +63,7 @@
         </nav>
     </header>
     <div class="main_title text-center">
-      <h1>Sri Sai Thiara Flats</h1>
+      <h1>Akrithi Flats</h1>
   </div>
     <div class="container">
       <div class="row">
@@ -91,13 +91,13 @@
                         </div>
                       </div>
                   <div class="carousel-bottom">
-                    <div class="landmark">
+                    <!-- <div class="landmark">
                         <ul>
                             <li> 850m Sunshine School</li>
                             <li> 350m Puzhuthivakkam Bus Stand</li>
                         </ul>
                       <a href="enquiry.html" class="btn btn-primary" style="margin-left: 40px">Details</a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
              
