--- a/Rakesh-Pranav.html
+++ b/Rakesh-Pranav.html
@@ -62,7 +62,7 @@
         </nav>
     </header>
     <div class="main_title text-center">
-      <h1>Sri Sai Baba Flats</h1>
+      <h1>Rakesh-Pranav Flats</h1>
   </div>
     <div class="container">
       <div class="row">
@@ -92,13 +92,13 @@
                     </div>
                   </div>
                   <div class="carousel-bottom">
-                    <div class="landmark">
+                    <!-- <div class="landmark">
                         <ul>
                             <li> 1km from Puzhuthivakkam bus stand </li>
                             <li> 1km from Vyasa Vidhyalaya School </li>
                         </ul>
 
-                    </div>
+                    </div> -->
                   </div>
                 </div>
              
