--- a/Sri Sai Shanmuga.html
+++ b/Sri Sai Shanmuga.html
@@ -93,13 +93,13 @@
                     </div>
                   </div>
                   <div class="carousel-bottom">
-                    <div class="landmark">
+                    <!-- <div class="landmark">
                         <ul>
                             <li> 1km from Puzhuthivakkam bus stand </li>
                             <li> 1km from Vyasa Vidhyalaya School </li>
                         </ul>
 
-                    </div>
+                    </div> -->
                   </div>
                 </div>
              
@@ -137,7 +137,7 @@
           <div class="col-lg-8 map-iframe">
               <div class="row wow slideInRight" id="enquiry-form" style="visibility: visible; animation-name: slideInRight;">
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 50%">
-                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.9956887839335!2d80.20459779468422!3d12.97212732394245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525dcbfaa229a9%3A0x19afbb7db6c4d9f1!2sGK%20Sri%20Sai%20Ramya!5e0!3m2!1sen!2sin!4v1670172108887!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7775.718376618101!2d80.20597669968875!3d12.980856800000016!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525dbca2e81d09%3A0x2a8b9d7e627dea34!2sSri%20Sai%20Shanmuga!5e0!3m2!1sen!2sin!4v1678190031754!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
               </div>
           </div>
