--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div class="clearfix"></div>
 
             <div class="col-md-12 ftco-intro text-right wow slideInLeft" style="padding:0px">
-                <a class="btn btn-primary yellow" style="margin-top: 0px" href="about-us.html">Know More About Us</a></b>
+                <a class="btn btn-primary yellow" style="margin-top: 0px" href="About.html">Know More About Us</a></b>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -364,25 +364,11 @@
         <h3>Our 3D Designs</h3>
     </div>
 
-    <div class="row m0 builder_inner">
-        <div class="builder_item">
-            <a href="our-works.html"><img src="images/imgZ.jpeg" alt="Best Architects in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a href="our-works.html"><img src="images/house-construction.webp" alt="Construction Company in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a href="our-works.html"><img src="images/house-construction.webp" alt="Architects in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a href="our-works.html"><img src="images/house-construction.webp" alt="Residential Construction Company in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a href="our-works.html"><img src="images/house-construction.webp" alt="Best Architects in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a href="our-works.html"><img src="images/house-construction.webp" alt="Construction Companies in Chennai"></a>
-        </div>
+    <div class="row m0 builder_inner " id="imageRow">
+
+        
+
+
     </div>
 </section>
 
@@ -392,47 +378,6 @@
 
 
 <p>&nbsp;</p>
-
-
-<!-- <section class="team_area">
-    <div class="container">
-        <div class="main_title text-center">
-            <h3>Our 3D Designs</h3>
-        </div>
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="myimg" data-toggle="lightbox" data-gallery="gallery" href="images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  1.jpg" style="background-image:url('images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  1.jpg')"></div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="myimg" data-toggle="lightbox" data-gallery="gallery" href="images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  2.jpg" style="background-image:url('images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  2.jpg')"></div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="myimg" data-toggle="lightbox" data-gallery="gallery" href="images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  3.jpg" style="background-image:url('images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  3.jpg')"></div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="myimg" data-toggle="lightbox" data-gallery="gallery" href="images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  4.jpg" style="background-image:url('images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  4.jpg')"></div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="myimg" data-toggle="lightbox" data-gallery="gallery" href="images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  8.jpg" style="background-image:url('images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  8.jpg')"></div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="myimg" data-toggle="lightbox" data-gallery="gallery" href="images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  11.jpg" style="background-image:url('images/3d-designs/Contemporary House Exterior Designs by GK Promoters Architects  11.jpg')"></div>
-            </div>
-            <div class="clearfix"></div>
-
-            <div class="col-md-12 ftco-intro text-center wow slideInLeft" style="padding:0px">
-                <a class="btn btn-primary yellow" href="our-works.html">Our Designs</a></b>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-</section> -->
 
 
 
@@ -586,40 +531,6 @@
 
 
 <p>&nbsp;</p>
-
-<!-- 
-<section class="builder_area">
-    <div class="main_title text-center">
-        <h3>Our Office at ECR, Chennai</h3>
-    </div>
-
-    <div class="row m0 builder_inner">
-        <div class="builder_item">
-            <a><img src="images/ecr-office/GK Promoters-architects-ecr-office-1.webp" alt="Best Architects in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a><img src="images/ecr-office/GK Promoters-architects-ecr-office-2.webp" alt="Architects in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a><img src="images/ecr-office/GK Promoters-architects-ecr-office-3.webp" alt="Construction Company in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a><img src="images/ecr-office/GK Promoters-architects-ecr-office-4.webp" alt="Residential Construction Company in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a><img src="images/ecr-office/GK Promoters-architects-ecr-office-5.webp" alt="Construction Companies in Chennai"></a>
-        </div>
-        <div class="builder_item">
-            <a><img src="images/ecr-office/GK Promoters-architects-ecr-office-6.webp" alt="Best Architects in Chennai"></a>
-        </div>
-    </div>
-
-    <p>&nbsp;</p>
-
-    <div class="container">
-
-    </div>
-</section> -->
 
 
 
@@ -992,18 +903,12 @@
                 <ul class="footer-links">
                     <li><a href="/"><i class="fa fa fa-caret-right"></i> Home</a></li>
                     <li><a href="about-us.html"><i class="fa fa fa-caret-right"></i> About Us</a></li>
-                    <!-- <li><a href="our-team.html"><i class="fa fa fa-caret-right"></i> Our Team</a></li> -->
                     <li><a href="residential-construction.html"><i class="fa fa fa-caret-right"></i> Construction Package</a></li>
-                    <!-- <li><a href="our-works.html"><i class="fa fa fa-caret-right"></i> Our Works</a></li> -->
-                    <!-- <li><a href="road-construction.html"><i class="fa fa fa-caret-right"></i> Government Projects</a></li> -->
-                    <!-- <li><a href="javascript://" onclick="OpenBlog()"><i class="fa fa fa-caret-right"></i> Blog</a></li> -->
-                    <!-- <li><a href="career.html"><i class="fa fa fa-caret-right"></i> Career</a></li> -->
                     <li><a href="Current.html"><i class="fa fa fa-caret-right"></i> Current Project</a></li>
                     <li><a href="Completed.html"><i class="fa fa fa-caret-right"></i> Completed Projects</a></li>
                     <li><a href="Gallery.html"><i class="fa fa fa-caret-right"></i> Gallery</a></li>
                     <li><a href="enquiry.html"><i class="fa fa fa-caret-right"></i> Contact Us</a></li>
-                    <!-- <li><a href="joint-venture-chennai.html"><i class="fa fa fa-caret-right"></i> Joint Venture</a></li> -->
-                    <!-- <li><a href="javascript://" onclick="OpenLogin(1)"><i class="fa fa fa-caret-right"></i> Customer Login</a></li> -->
+
                 </ul>
             </div>
 
@@ -1039,31 +944,6 @@
 
 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" id="offerclick" data-target="#offer" style="display:none">&nbsp;</button>
 
-<!-- <div id="offer" class="modal fade" role="dialog"> --banner
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-body">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <div>
-                    <img src="images/GK_logo.png" alt="" class="img-responsive"/>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
-
-<!-- <div class="gototop js-top">
-    <a href="javascript://" class="js-gotop"><i class="icon-arrow-up2"></i></a>
-</div> -->
-
-
-<!-- <div id="rcb">
-    <a href="javascript://" data-toggle="modal" data-target="#reqcb">
-        <img src="images/callback.png" class="img-responsive" alt="Request a Callback">
-    </a>
-</div> -->
 
 <div id="reqcb" class="modal fade centered-modal" role="dialog">
     <div class="modal-dialog modal-md">
@@ -1189,7 +1069,7 @@ obj={"userip":data.ip,"url":url};s=document.createElement("script");s.src="track
 <script type="text/javascript" src="js/jquery.animateNumber.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script type="text/javascript" src="js/main.js"></script>
-
+<script src="js/current.js"></script>
 <script type="text/javascript">$(document).ready(function(){$(document).click(function(event){var clickover=$(event.target);var _opened=$(".navbar-collapse").hasClass("navbar-collapse collapse in");if(_opened===true){$("button.navbar-toggle").click();}});});</script>
 
 <style type="text/css">.ekko-lightbox-nav-overlay a{color:#333!important}</style>
