--- a/Sri Sai baba.html
+++ b/Sri Sai baba.html
@@ -92,13 +92,13 @@
                     </div>
                   </div>
                   <div class="carousel-bottom">
-                    <div class="landmark">
+                    <!-- <div class="landmark">
                         <ul>
                             <li> 1km from Puzhuthivakkam bus stand </li>
                             <li> 1km from Vyasa Vidhyalaya School </li>
                         </ul>
 
-                    </div>
+                    </div> -->
                   </div>
                 </div>
              
